v 4.1.1 - Вынес все из Main в Bot - Исправил загрузку документов - Поправил тест AnyUtilsTest.removeOldSubjectsDocuments_isCorrect - Поправил функцию Utils.removeOldSubjectsDocuments - Увеличил количество попыток запроса в ЛК с 3 до 5 - Поменял кнопки у лидера группы местами - Добавил тест для логина в ЛК - Оптимизировал LkClient